fix: removed too small photos

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -4,7 +4,7 @@
 }
 
 .contact-marketing {
-    background-image: url('../images/sax_laptop.jpg');
+    background-image: url('http://placekitten.com/1919/1082');
 }
 
 .contact-map {
