--- a/app/styles/classes.css
+++ b/app/styles/classes.css
@@ -1,4 +1,4 @@
 
 .classes-marketing1 {
-    background-image: url('../images/cymbalki_1280.jpg');   
+    background-image: url('http://placekitten.com/1920/1081');   
 }
